# pymatcalc6

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pymatcalc.i  pyproject.toml  setup.py
examples/: fe-c_phase_diagram.py  get_chemical_potentials.py
include/: matcalc_api.h
pymatcalc/: __init__.py  api.py  utils.py
pymatcalc6/: api.py  utils.py
