[project]
name = "pymatcalc6"
dynamic = ["version"]
description = "Python Interface to MatCalc 6"
authors = [
    { name = "Arthur Nishikawa", email = "a.nishikawa@tatasteeleurope.com" },
]
requires-python = ">=3.9"

[project.optional-dependencies]
examples = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "tornado>=6.4.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
